--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ footer {
 <body>
 
 <header>
-  <h1>Mahesh Kumar Billore</h1>
+  <h1>Mahesh Billore</h1>
   <p>Flutter Developer | Node.js Developer | AWS Learner 🚀</p>
 </header>
 
